@@ -2,6 +2,8 @@
 
 	* timidity/sndfont.c:
 	  Fix for Soundfonts with strange loop points.
+	* timidity/playmidi.c, timidity/readmidi.[ch], timidity/reverb.[ch]:
+	  Support for XG variation effect: Delay L,C,R.
 
 2004-03-05  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
